# Stranded

./: .gitignore  CMakeLists.txt  README.md  build.ps1  launch-multiplayer.ps1  vcpkg.json
.github/: copilot-instructions.md
src/audio/: SoundManager.cpp  SoundManager.hpp
src/game/: AnimatedGameObject.hpp  AttackingFish.hpp  Boat.hpp  Camera.hpp  DebugObject.hpp  FishProjectile.hpp  FishingHook.hpp  GameObject.hpp  Gun.hpp  Hook.hpp  IAnimatable.hpp  ICollidable.hpp  IInteractable.hpp  Lighthouse.hpp  Particle.hpp  ParticleSystem.hpp  Player.hpp  Projectile.hpp  Rectangle.hpp  Rod.hpp  Text.hpp  UIGameObject.hpp  Vector2.hpp  main.cpp
src/tileseteditor/: index.html  script.js  style.css
tilesets/: tilemap.json
